[workspace]
members = ["datafusion_util", "influxdb_influxql_parser", "iox_query_influxql", "observability_deps", "schema", "test_helpers"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["IOx Project Developers"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
arrow = { version = "49.0.0" }
datafusion = { git = "https://github.com/CeresDB/arrow-datafusion.git", rev = "2891cba41", default-features = false }
hashbrown = { version = "0.13.2" }
