[package]
name = "generated_types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies] # In alphabetical order
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
pbjson = "0.5"
pbjson-types = "0.5"

[build-dependencies] # In alphabetical order
tonic-build = "0.8"
prost-build = "0.11"
pbjson-build = "0.5"
