[package]
name = "iox_query"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies] # In alphabetical order
datafusion = { workspace = true }
observability_deps = { path = "../observability_deps" }
query_functions = { path = "../query_functions" }
arrow = { workspace = true, features = ["prettyprint"] }
arrow_util = { path = "../arrow_util" }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false }
datafusion_util = { path = "../datafusion_util" }
test_helpers = { path = "../test_helpers" }
futures = "0.3"
hashbrown = { workspace = true }
once_cell = "1"
parking_lot = "0.12"
schema = { path = "../schema" }
snafu = "0.7"
tokio = { version = "1.27", features = ["macros", "parking_lot"] }
tokio-stream = "0.1"
log = "0.4.17"

[dev-dependencies] 
insta = { version = "1", features = ["yaml"] }
